--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,6 +299,38 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
 
+/* Diet Page */
+#main-stats {
+  margin-top: 3rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#main-stats .stats-display {
+  min-width: 15rem;
+  max-width: 30rem;
+  position: relative;
+}
+
+.stats-display #edit-icon {
+  position: absolute;
+  top: 0.1rem;
+  right: 0.1rem;
+  cursor: pointer;
+  transition: color 0.5s ease-in;
+}
+
+#join-us,
+#stats-display {
+  display: none;
+}
+
+#edit-icon:hover {
+  color: #4bae77;
+}
+
 @media screen and (max-width: 1680px) {
   .container.\31 25\25 {
     width: 100%;
@@ -2076,7 +2108,7 @@ article.special article {
 
 section.wrapper,
 article.wrapper {
-  padding: 6em 0;
+  padding: 1em 0;
 }
 
 section.wrapper header,
