--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,6 +304,7 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-top: 3rem;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
